--- a/index.html
+++ b/index.html
@@ -2,10 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+  <h1>
+    weather dashboard 
+ </h1> 
+  <div class="row">
+    <div class="col-sm-2">
+      <h2>
+        search for a city:
+      </h2>
+    <input type="text"class="search" placeholder="toronto" />
+    <button class="searchbtn">
+        search
+    </button>
+    </div>
+    <div class="col-sm-10">
+      <div class="h-100 p-5 bg-body-tertiary border rounded-3">
+        <h2>Add borders</h2>
+        <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
+        <button class="btn btn-outline-secondary" type="button">Example button</button>
+      </div>
+    </div>
+  </div>
 </body>
+<script src="./script.js">
+</script>
+
 </html>
