--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
       <button class="searchbtn">
         search
       </button>
+      <ul class="list-group">
+        <li class="list-group-item"><button type="button" class="w-100 btn btn-secondary">novascotia</button></li>
+        <li class="list-group-item"><button type="button" class="w-100 btn btn-secondary">moncton</button></li>
+        <li class="list-group-item"><button type="button" class="w-100 btn btn-secondary">Saint john</button></li>
+        <li class="list-group-item"><button type="button" class="w-100 btn btn-secondary">fredericton</button></li>
+        <li class="list-group-item"><button type="button" class="w-100 btn btn-secondary">Woodstock</button></li>
+      </ul>
     </div>
     <div class="col-sm-10">
       <div class=" p-1 bg-body-tertiary border rounded-3">
@@ -41,8 +48,14 @@
           <div class="card">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">9/24/2023 <img src="https://openweathermap.org/img/wn/01d@2x.png" alt="">        </h5>
+              <p class="card-text">Temp:63.55°F</p>
+              <p>
+                Wind:3.94 MPH
+              </p>
+              <p>
+                Humidity:63%
+              </p>
             </div>
           </div>
         </div>
@@ -50,8 +63,16 @@
           <div class="card">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">9/25/2023   <img src="https://openweathermap.org/img/wn/01d@2x.png" alt=""> </h5>
+              <p class="card-text"></p>
+                temp:66.52°F
+              </p>
+              <p>
+              wind:
+              </p>
+              <p>
+              Humidity:
+              </p>
             </div>
           </div>
         </div>
@@ -59,7 +80,7 @@
           <div class="card">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">9/26/2023    <img src="https://openweathermap.org/img/wn/01d@2x.png" alt="">                          </h5>
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
             </div>
           </div>
@@ -68,16 +89,17 @@
           <div class="card">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">9/26/2023    <img src="https://openweathermap.org/img/wn/01d@2x.png" alt="">                          </h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
             </div>
           </div>
         </div>
+        
         <div class="col-2">
           <div class="card">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">9/27/2023  <img src="https://openweathermap.org/img/wn/01d@2x.png" alt=""> </h5>
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
           </div>
